<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity">

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/layout_header" />

    <ImageView
        android:layout_width="203dp"
        android:layout_height="203dp"
        android:id="@+id/imageView"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:src="@drawable/thibault"/>

    <TextView
        android:text="@string/student_title_student"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:id="@+id/student_title_student"
        android:layout_marginTop="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:textAppearance="@style/InfoStudent"
        android:textAlignment="center"/>

    <TextView
        android:text="@string/nameStudent"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:id="@+id/nameStudent"
        android:textAlignment="center"
        android:textAppearance="@style/InfoStudent"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/mailStudent"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:id="@+id/mailStudent"
        android:textAppearance="@style/InfoStudent"
        android:textAlignment="center"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="116dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/groupStudent"
        android:layout_width="220dp"
        android:layout_height="25dp"
        android:id="@+id/groupStudent"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="106dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/InfoStudent"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/urlProfile"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="106dp"
        android:text="@string/urlProfile" />

</LinearLayout>