<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupInfosActivity">

    <Button
        android:id="@+id/buttonStudent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_button1"
        app:layout_constraintBottom_toTopOf="@+id/buttonStudent2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStudent3"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonStudent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStudent1"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonStudent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_button3"
        app:layout_constraintBottom_toTopOf="@+id/buttonStudent1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>